Loading text on start

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="Number-filtered" class="number-loaded d-none">Es wurden <span id="Number-filtered-pokemon"></span> Pokemon gefunden.</div>
 
         <div id="Pokemon-cards" class="pokemon-cards-container">         
-             
+             <div id="Loading">Lädt Pokemon...</div>
         </div>
 
         <div class="button-more-poke-container">            
