--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
         <div id="Number-filtered" class="number-loaded d-none">Es wurden <span id="Number-filtered-pokemon"></span> Pokemon gefunden.</div>
 
-        <div id="Pokemon-cards" class="pokemon-cards-container">         
-             <div id="Loading">Lädt Pokemon...</div>
+        <div id="Pokemon-cards" class="pokemon-cards-container">       
+             
         </div>
 
+        <div id="Loading"><img class="rotate" src="img/favicon_pokeball.png" alt="Loading..."></div>
+        
         <div class="button-more-poke-container">            
             <button onclick="morePokemon()">mehr Pokemon</button>
         </div>
